aks_deployment/mlflowtracking.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mlflow-tracking-front
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mlflow-tracking-front
    spec:
      containers:
      - name: mlflow-tracking-front
        image: mrnivram/mlflow:0.9.1
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: "/mnt/azure"
          name: volume
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: azurefile
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-tracking-front
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: mlflow-tracking-front
