aks_deployment/mlflowtracking_old.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mlflow-tracking-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mlflow-tracking
    spec:
      containers:
      - name: mlflow-tracking-container
        image: mrnivram/mlflow:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: "/mnt/azure"
          name: volume
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: azurefile
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-tracking-service
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: mlflow-tracking
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mlflow-tracking-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: mlflow.localhost
    http:
      paths:
      - path: /mlflow
        backend:
          serviceName: mlflow-tracking-service
          servicePort: http
